# PyEDI-Core

./: .gitignore  .processed  BeveragerTaskList.md  CLAUDE.md  OVERSIGHT-AGENTS.md  PROJECT_INTENT.md  PyEDI_Core_Specification.docx  PyEDI_Core_Specification_v2.3.md  PyEDI_Core_Testing_Specification-user-supplied-v1.md  PyEDI_Core_Testing_Specification-user-supplied-v2.md  Pyedi core specification v2.3.md  README.md  REVIEW_REPORT.md  SPECIFICATION.md  TEST_RESULTS.md  TODO.md  UTILITY_SCRIPTS.md  generate_expected.py  portalUiReadMe.md  processed  pyproject.toml  rulesApproach.MD  sqlLiteReport.md  verify_structure.py
portal/: dev.sh  pyproject.toml
portal/api/: app.py  models.py
portal/api/routes/: compare.py  config.py  manifest.py  onboard.py  pipeline.py  rules.py  test.py  validate.py
portal/tests/: test_compare_api.py
portal/tests/e2e/: conftest.py  test_compare.py  test_config.py  test_dashboard.py  test_navigation.py  test_onboard.py  test_pipeline.py  test_rules.py  test_tests.py  test_validate.py
portal/tests/e2e/pages/: base_page.py  compare_page.py  config_page.py  dashboard_page.py  onboard_page.py  pipeline_page.py  rules_page.py  tests_page.py  validate_page.py
portal/ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
portal/ui/src/: App.tsx  api.ts  index.css  profileEvents.ts
portal/ui/src/pages/: Compare.tsx  Config.tsx  Dashboard.tsx  Onboard.tsx  Pipeline.tsx  Rules.tsx  Tests.tsx  (+2 more)
portal/ui/tests/: onboard-multidim-match-key.spec.ts  onboard-x12-855.spec.ts  portal-smoke.spec.ts  x12-wizard.spec.ts
(+299 files in other folders)
